# py-napcat

./: .gitignore  LICENSE  README.md  pyproject.toml
src/Hcatbot/: __init__.py
src/Hcatbot/model/: __init__.py  element.py  exception.py  message_event.py  meta_event.py  notice_event.py  request_event.py  sender.py
src/py-napcat/: __init__.py
src/py-napcat/factory/: __init__.py  message_factory.py  notice_factory.py  request_factory.py
src/py-napcat/model/: __init__.py  basic_event.py  element.py  exception.py  message_event.py  meta_event.py  notice_event.py  request_event.py
src/py_napcat/: __init__.py
src/py_napcat/model/: __init__.py  basic_event.py  element.py  exception.py  message_event.py  meta_event.py  request_event.py  sender.py
tests/: element_test.py  message_event_test.py  meta_event_test.py
