[project]
name = "py-napcat"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    { name = "Half_nothing", email = "Half_nothing@163.com" },
]
dependencies = [
    "loguru>=0.7.3",
    "websockets>=15.0.1",
    "async-event-bus>=0.3.0"
]
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Natural Language :: Chinese (Simplified)"
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"


[tool.pdm]
distribution = true


[dependency-groups]
build = [
    "setuptools>=80.9.0",
]
test = [
    "pytest>=8.4.1",
]
